got pictures to render to page!

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -15,6 +15,10 @@
   <main>
     <header>
       <h1>
+        <nav>
+          <a href="/">Home</a>
+          <a href="/searches/new">Search Books</a>
+        </nav>
         <a href="#menu" class="box-shadow-menu"></a>
       </h1>
     </header>
