--- a/views/pages/searches/new.ejs
+++ b/views/pages/searches/new.ejs
@@ -13,6 +13,15 @@
 
 <body>
   <main>
+    <header>
+      <h1>
+        <nav>
+          <a href="/">Home</a>
+          <a href="/searches/new">Search Books</a>
+        </nav>
+        <a href="#menu" class="box-shadow-menu"></a>
+      </h1>
+    </header>  
     <h4>Search by Title or Author</h4>
     <form action="/searches" method="post">
       <input type="text" name="search" placeholder="Enter a title or author" required>
