updating css on book app

--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -13,6 +13,17 @@ header{
   width: 100%;
 }
 
+.bookResults {
+  border: 3px ridge black;
+  background-color: gray;
+  margin: 10px auto;
+  padding: 5px;
+}
+
+.bookResults li {
+  text-decoration: none;
+  text-align: center;
+}
 .box-shadow-menu {
   position: relative;
   padding-left: 1.25em;
@@ -28,6 +39,50 @@ header{
   height: 0.15em;
   background: black;
   box-shadow: 
+  0 0.25em 0 0 black,
+  0 0.5em 0 0 black;
+}
+
+@media(max-width: 460px){
+  main{
+    background-color: blue;
+    height: 250px;
+    width: 50%;
+    margin: 0px auto;
+  }
+
+  header{
+    display: inline-block;
+    width: 100%;
+  }
+
+  .bookResults {
+    border: 3px ridge black;
+    background-color: gray;
+    margin: 10px auto;
+    padding: 5px;
+  }
+
+  .bookResults li {
+    text-decoration: none;
+    text-align: center;
+  }
+  .box-shadow-menu {
+    position: relative;
+    padding-left: 1.25em;
+  }
+  .box-shadow-menu:before {
+    display: flex;
+    justify-content: flex-end;
+    content: "";
+    position: absolute;
+    right: 0;
+    top: 0.25em;
+    width: 1em;
+    height: 0.15em;
+    background: black;
+    box-shadow: 
     0 0.25em 0 0 black,
     0 0.5em 0 0 black;
+  }
 }
