added description to book results

--- a/views/pages/searches/show.ejs
+++ b/views/pages/searches/show.ejs
@@ -37,6 +37,9 @@
           <%= array.authors[i] %>
         </li>
         <% } %>
+        <li>
+          <%= array.description %>
+        </li>
       </div>
     <% }) %>
   </ul>
