--- a/views/pages/books/detail.ejs
+++ b/views/pages/books/detail.ejs
@@ -7,8 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Book App</title>
 
-  <link rel="stylesheet" href="styles/reset.css">
-  <link rel="stylesheet" href="styles/base.css">
+  <link rel="stylesheet" href="../styles/reset.css">
+  <link rel="stylesheet" href="../styles/base.css">
 </head>
 
 <body>
@@ -21,19 +21,17 @@
         </nav>
         <a href="#menu" class="box-shadow-menu"></a>
       </h1>
+      <ul>
+        <div class="bookResults">
+          <li><%- databaseResults.image_url%></li>
+          <li><%= databaseResults.title %></li>
+          <li><%= databaseResults.author %></li>
+          <li><%= databaseResults.description %></li>
+      </ul>
+
     </header>
-    <div class="bookResults">
-      <img src="<%= searchResults.image_url %>" alt="">
-      <p>
-        <%= searchResults.title %>
-      </p>
-      <p>
-        <%= searchResults.authors %>
-      </p>
-      <p>
-        <%= searchResults.description %>
-      </p>
-    </div>
+
+
     <footer>
 
     </footer>
