--- a/views/pages/searches/show.ejs
+++ b/views/pages/searches/show.ejs
@@ -45,6 +45,7 @@
           <input type="hidden" name="book_title" value="<%= array.title %>">
           <input type="hidden" name="book_authors" value="<%= array.author %>">
           <input type="hidden" name="book_description" value=" <%= array.description %>">
+          <input type="hidden" name="book_isbn" value="<%= array.isbn %>">
           <button>SAVE TO DATABASE</button>
         </form>
       </div>
