--- a/views/pages/searches/show.ejs
+++ b/views/pages/searches/show.ejs
@@ -43,9 +43,9 @@
         <form action="/books" method="post">
           <input type="hidden" name="book_image" value="<%= array.image %>">
           <input type="hidden" name="book_title" value="<%= array.title %>">
-          <input type="hidden" name="book_authors" value="<%= array.author %>">
+          <input type="hidden" name="book_authors" value="<%= array.authors %>">
           <input type="hidden" name="book_description" value=" <%= array.description %>">
-          <input type="hidden" name="book_isbn" value="<%= array.isbn %>">
+          <!-- <input type="hidden" name="book_isbn" value="<%= array.isbn %>"> -->
           <button>SAVE TO DATABASE</button>
         </form>
       </div>
